<resources>
    <string name="app_name">Chayuttapong week3</string>
<!--  หน้าที่1  -->
    <string name="tv_header1">กรุณากรอกข้อมูล</string>
    <string name="tv_fname">ชื่อ</string>
    <string name="tv_lname">นามสกุล</string>
    <string name="tv_old">อายุ</string>
    <string name="tv_pet">สัตว์เลี้ยงที่เลี้ยง</string>
    <string name="tv_motorcycle">รถจักรยานยนต์ที่ใช้</string>
    <string name="btn_sender">ส่งข้อมูล</string>
    <string name="btn_clear">ล้างข้อมูล</string>
    <string name="btn_close">ปิด</string>

<!--  หน้าที่2  -->
    <string name="tv_header2">ผลลัพธ์</string>
    <string name="btn_back">กลับหน้าแรก</string>
</resources>
