<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/tv_header1"
        android:textAlignment="center"
        android:textColor="#B91E1E"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_fname"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <TextView
        android:id="@+id/tv_lname"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_lname"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_fname"
        app:layout_constraintTop_toBottomOf="@+id/tv_fname" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_fname"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/tv_lname"
        app:layout_constraintTop_toBottomOf="@+id/et_fname" />

    <Button
        android:id="@+id/btn_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#67CC6A"
        android:text="@string/btn_sender"
        android:textColor="#0F0C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_motorcycle" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#73D1E2"
        android:text="@string/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_sender" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="168dp"
        android:backgroundTint="#FD0505"
        android:text="@string/btn_close"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <TextView
        android:id="@+id/tv_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_old"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_lname"
        app:layout_constraintTop_toBottomOf="@+id/tv_lname" />

    <TextView
        android:id="@+id/tv_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tv_pet"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_old"
        app:layout_constraintTop_toBottomOf="@+id/tv_old" />

    <TextView
        android:id="@+id/tv_motorcycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_motorcycle"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_pet"
        app:layout_constraintTop_toBottomOf="@+id/tv_pet" />

    <EditText
        android:id="@+id/et_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/tv_old"
        app:layout_constraintTop_toBottomOf="@+id/et_lname" />

    <EditText
        android:id="@+id/et_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/tv_pet"
        app:layout_constraintTop_toBottomOf="@+id/et_old" />

    <EditText
        android:id="@+id/et_mt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/tv_motorcycle"
        app:layout_constraintTop_toBottomOf="@+id/et_pet" />

</androidx.constraintlayout.widget.ConstraintLayout>